[tool.poetry]
name = "de-challenge"
version = "0.1.0"
description = ""
authors = ["Bruno Tomas Caracini <bruno98980@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.20"
uvicorn = "^0.23.2"
pytest = "^7.4.1"
coverage = "^7.3.0"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.23.2"
black = "^23.7.0"
flake8 = "^6.1.0"
pytest = "^7.4.1"
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
